--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,80 @@
-// TODO
+.container {
+  padding: 2.5rem 0 5rem;
+
+  button {
+    background: transparent;
+    border: 0;
+    color: var(--pink-300);
+    margin-top: 4rem;
+    font-size: 1.125rem;
+    font-weight: 600;
+  }
+}
+
+.posts {
+  width: 100%;
+  margin-top: 1.5rem;
+
+  a {
+    width: 100%;
+    display: flex;
+
+   .detailContainer h2 {
+      font-size: 1.75rem;
+      font-weight: bold;
+      color: var(--gray-100);
+      margin-bottom: 0.5rem;
+    }
+
+    .detailContainer p {
+      font-size: 1.125rem;
+      color: var(--gray-200);
+      margin-bottom: 1.5rem;
+    }
+
+    .detailContainer > div {
+      display: flex;
+    }
+
+    .detailContainer span {
+      font-size: 0.875rem;
+      text-transform: capitalize;
+      color: var(--gray-300);
+
+      display: flex;
+      align-items: center;
+
+      svg {
+        margin-right: 0.5rem;
+      }
+
+      &:last-child {
+        margin-left: 1.5rem;
+      }
+    }
+
+    transition: filter 0.2s;
+    cursor: default;
+
+    .detailContainer h2:hover {
+      filter: brightness(80%);
+      cursor: pointer;
+    }
+
+    & + a {
+      margin-top: 3rem;
+    }
+
+    .listThumbnail {
+      background: rgba(var(--gray-v-100), 0.5);
+      margin-right: 1rem;
+      border-radius: 0.125rem;
+      cursor: pointer;
+    }
+
+    .listThumbnail img {
+      width: 6rem;
+      height: 6rem;
+    }
+  }
+}
