--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,4 +4,46 @@
   padding: 0;
 }
 
-// TODO
+:root {
+  --gray-v-100: 248, 248, 248;
+  --gray-100: rgb(248, 248, 248);
+  --gray-200: #d7d7d7;
+  --gray-300: #bbbbbb;
+  --gray-800: #1a1d23;
+
+  --pink-300: #ff57b2;
+}
+
+@media (max-width: 1080px) {
+  html {
+    font-size: 93.75%;
+  }
+}
+
+@media (max-width: 720px) {
+  html {
+    font-size: 87.5%;
+  }
+}
+
+body {
+  background: var(--gray-800);
+  color: var(--gray-100);
+}
+
+body,
+input,
+textarea,
+select,
+button {
+  font: 400 1rem "Inter", sans-serif;
+}
+
+button {
+  cursor: pointer;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
